Fix default datapoint permissions